# turbocow

./: .gitignore  .gitlab-ci.yml  README.md
bmp_support/: Cargo.toml
bmp_support/src/: common.rs  lib.rs  reader.rs  writer.rs
ci/: bmp_support.yml  converter.yml  core.yml  gif_support.yml  images.yml  jpeg_support.yml  png_support.yml  ppm_support.yml  templates.yml  turbocow.yml
converter/: Cargo.toml
converter/src/: main.rs
core/: .gitignore  Cargo.toml
core/docs/: performance_checklist.md
core/src/: lib.rs  main.rs  models.rs  plugins.rs  utils.rs
core/src/geometry/: kdtree.rs  matrix.rs  mod.rs  models.rs  transform.rs  vector3.rs
core/src/models/: image.rs  pixel.rs
core/src/obj_io/: obj_file_reader.rs
core/src/objects/: mod.rs  polygon_object.rs  sphere.rs  triangle.rs
core/src/plugins/: plugins.rs  resolver.rs
core/src/render/: basic.rs  mod.rs  multithreaded.rs  render.rs
core/src/scene/: camera.rs  scene.rs  scene_object.rs
deploy/: README.md  cloud_storage_proxy.yaml  nginx.yaml  rabbitmq.yaml  redis.yaml  worker.yaml
docs/: jpeg.md  plugins.md
gif_support/: Cargo.toml
gif_support/src/: clustering.rs  common.rs  lib.rs  reader.rs  writer.rs
images/: Dockerfile_rust_openssl  deploy_tools.Dockerfile  nginx.Dockerfile  rust_openssl.Dockerfile  service.Dockerfile
images/nginx/: nginx.conf
jpeg_support/: Cargo.toml
jpeg_support/src/: common.rs  errors.rs  huffman.rs  lib.rs  reader.rs  writer.rs
lab1/: Cargo.toml
livestonk/: Cargo.toml
livestonk/src/: lib.rs
livestonk_demo/: Cargo.toml  README.md
livestonk_demo/src/: example.rs  main.rs
livestonk_derive/: Cargo.toml
livestonk_derive/src/: lib.rs
png_support/: Cargo.toml
png_support/src/: chunk.rs  filter.rs  inflate.rs  lib.rs  reader.rs  writer.rs
ppm_support/: Cargo.toml
ppm_support/assets/: example1.ppm  result.ppm  simple.ppm
ppm_support/src/: lib.rs  reader.rs  writer.rs
tools/: plugins.txt
turbocow/: .gitignore  Cargo.toml  README.md
turbocow/assets/: demo.cowscene
turbocow/docs/: commands.md  performance_checklist.md  profiling.md  ui.md
turbocow/scenes/: cow.cowscene  demo.cowscene  demo_advanced.cowscene  materials.cowscene  simple_sphere.cowscene
turbocow/src/: main.rs
turbocow/src/distributed/: metrics.rs  mod.rs  runner.rs
turbocow/src/geometry/: kdtree.rs  matrix.rs  models.rs  ray.rs  transform.rs  vector3.rs
turbocow/src/io/: mod.rs  traits.rs
turbocow/src/materials/: material.rs
turbocow/src/obj_io/: mod.rs  obj_file_reader.rs
turbocow/src/objects/: cube.rs  mod.rs  plane.rs  polygon_object.rs  sphere.rs  triangle.rs
turbocow/src/protocol/: connectivity_test.rs  message.rs  mod.rs  socket.rs
turbocow/src/render/: basic.rs  basic_push.rs  intersection.rs  mod.rs  multithreaded.rs  multithreaded_push.rs  render.rs  streaming.rs
turbocow/src/scene/: camera.rs  distant_light.rs  light.rs  mod.rs  point_light.rs  scene.rs  scene_object.rs
turbocow/src/scenes/: demo.rs  mod.rs  pack.rs  provider.rs  sceneformat.rs
turbocow/src/ui/: window.rs
turbocow_core/: Cargo.toml
turbocow_core/src/: lib.rs
turbocow_core/src/models/: io.rs  mod.rs  pixel.rs
turbocow_core/src/plugins/: mod.rs
