[package]
name = "bmp_support"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>", "Pavlo Myroniuk <pspos.developqkation@gmail.com>"]
edition = "2018"

[lib]
# Building dynamic libraries is temporary disabled. If we need dynamic libraries later, we would better create a wrapper crate for each library.
# crate-type = ["cdylib"]

[dependencies]
turbocow_core = { path = "../turbocow_core" }
custom_error = "1.8.0"
byteorder = "1.4.2"
