[package]
name = "converter"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
log = "0.4.0"
env_logger = "0.8.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10.29", features = ["vendored"] }