[package]
name = "turbocow"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>", "Pavlo Myroniuk <pspos.developqkation@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbocow_core = { path = "../turbocow_core" }
livestonk = { path = "../livestonk" }
bmp_support = { path = "../bmp_support" }
custom_error = "1.8.0"
log = "0.4.0"
env_logger = "0.8.3"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10.29", features = ["vendored"] }
rayon = "1.5.0"
minifb = "0.19.3"

[profile.release]
opt-level = 3
lto = false # slower when true