[package]
name = "turbocow_core"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>", "Pavlo Myroniuk <pspos.developqkation@gmail.com>"]
edition = "2018"

[dependencies]
custom_error = "1.8.0"
libloading = "0.7.0"
log = "0.4.0"
colour = "0.6.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10.29", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = false # slower when true